# src2md

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  Makefile  PYPI_RELEASE_CHECKLIST.md  README.md  README_TESTS.md  RELEASE_NOTES_v2.1.0.md  RELEASE_SUMMARY.md  demo.py  example.py  pyproject.toml  pytest.ini  requirements-llm.txt  requirements-test.txt  requirements.txt  setup.py
docs/: README.md  USAGE_GUIDE.md
docs/api/: README.md  context.md  llm_summarizer.md  summarization.md
examples/: summarization_demo.py  test_basic.py
src2md/: __init__.py  __main__.py  cli.py  core_old.py  formatters_old.py  utils.py
src2md/core/: __init__.py  context.py  repository.py
src2md/formatters/: __init__.py  base.py  html.py  json.py  markdown.py
src2md/strategies/: __init__.py  importance.py  llm_summarizer.py  summarization.py
src2md/tests/unit/: test_smart_truncation.py  test_summarization.py
tests/: conftest.py  run_tests.py
tests/integration/: test_pipeline.py
tests/unit/: test_context.py  test_formatters.py  test_importance.py  test_repository.py
