[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "src2md"
version = "2.1.0"
description = "Convert source code to structured, context-optimized markdown for LLMs with intelligent summarization"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["markdown", "source code", "documentation", "llm", "context-window", "code-analysis", "summarization", "ast", "code-compression"]
authors = [
    { name = "Alex Towell", email = "lex@metafunctor.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "rich>=13.0.0",
    "tiktoken>=0.5.0",
    "pyyaml>=6.0",
    "pathspec>=0.11.0",
    "astroid>=3.0.0",  # For AST-based Python analysis
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.8.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-timeout>=2.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/queelius/src2md"
"Bug Tracker" = "https://github.com/queelius/src2md/issues"
"Documentation" = "https://github.com/queelius/src2md/blob/main/README.md"
"Changelog" = "https://github.com/queelius/src2md/blob/main/CHANGELOG.md"

[project.scripts]
src2md = "src2md.cli:main"

[tool.setuptools.packages.find]
include = ["src2md*"]
